--- a/ProyectoDAS/appsettings.json
+++ b/ProyectoDAS/appsettings.json
@@ -1,8 +1,8 @@
 {
-  "ConnectionStrings": {
-    // Cadena para conectar con tu servidor MySQL
-    "DefaultConnection": "server=localhost;port=3306;database=TiendaMass;user=root;password=admin"
-  },
+    "ConnectionStrings": {
+        // Cadena para conectar con tu servidor MySQL
+        "DefaultConnection": "server=.;database=TiendaMass;user=root;password=admin",
+    },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
