No Tocar Version 4

--- a/ProyectoDAS/appsettings.json
+++ b/ProyectoDAS/appsettings.json
@@ -1,7 +1,7 @@
 {
     "ConnectionStrings": {
         // Cadena para conectar con tu servidor MySQL
-        "DefaultConnection": "server=localhost;database=TiendaMass;user=root;password=admin.",
+        "DefaultConnection": "server=localhost;database=TiendaMass;user=root;password=admin."
     },
   "Logging": {
     "LogLevel": {
