--- a/ProyectoDAS/appsettings.json
+++ b/ProyectoDAS/appsettings.json
@@ -1,14 +1,18 @@
 {
-    "ConnectionStrings": {
-        "DefaultConnection": "server=localhost;database=TiendaMass;user=root;password=admin."
-    },
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=tcp:serverdas-pro.database.windows.net,1433;Initial Catalog=bdprojectdas;Persist Security Info=False;User ID=userdas;Password=Pa$$w0rd;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+  },
 
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
 
+  // 👇 Añade esta sección
+  "OpenAI": {
+    "ApiKey": "" // ← Reemplaza con tu clave real
+  }
 }
